styles/style.css
@font-face {
  font-family: "Prompt-Regular";
  src: url(Prompt-Regular.ttf);
}

html {
  scroll-behavior: smooth;
}

body {
  width: 1200px;
  margin: 0 auto;
  background: #fff;
  font: normal normal 400 20px/1.5 Prompt-Regular, Arial;
  color: #000;
  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
}

header {
  display: flex;
  flex-flow: row-reverse nowrap;
  justify-content: space-between;
  background: linear-gradient(
      330deg,
      rgb(131, 58, 180) 0%,
      rgb(253, 29, 29) 70%,
      rgb(252, 176, 69) 100%
    )
    fixed;
  border: 3px solid #000;
  border-top: none;
}

header img {
  height: 347px;
  box-shadow: -3px 0px 0px #000;
}

header div {
  display: block;
}

header p {
  color: #fff;
  font-size: 1.5em;
  margin: 10px 0 0 35px;
  border-left: 10px solid #000;
  padding: 10px 0 10px 30px;
  background: rgba(0, 0, 0, 0.5);
  font-style: italic;
  width: 100%;
}

h1 {
  font-size: 4em;
  margin: 0 0 0 30px;
  color: #fff;
  text-shadow: 6px 6px 0px #000;
}

/* nav div {
  display: flex;
  justify-content: center;
  position: sticky;
  top: 0;
  background: #fff;
  height: 50px;
  box-shadow: 0px 3px 0px #000;
  text-align: center;
} */

.menu {
  text-shadow: none;
  text-align: center;
  position: sticky;
  top: -51px;
  background: #fff;
  box-shadow: 0px 3px 0px #000;
}

.menu summary {
  padding: 10px 0;
}

nav {
  display: flex;
  justify-content: center;
  position: sticky;
  top: 0;
  background: #fff;
  height: 50px;
  box-shadow: 0px 3px 0px #000;
  text-align: center;
}

nav a {
  flex-grow: 1;
  text-decoration: none;
  padding: 10px;
  color: #000;
}

nav a:hover {
  text-decoration: underline;
}

h2,
h3 {
  color: #fff;
  text-shadow: 6px 6px 0px #000;
  font-size: 1.5em;
}

h2 {
  font-size: 2em;
}

a {
  text-decoration: underline;
  color: #fff;
  text-shadow: none;
}

blockquote {
  border-left: 10px solid #000;
  padding: 10px 0 10px 30px;
  background: rgba(0, 0, 0, 0.5);
  font-style: italic;
  margin: 10px 0;
}

details summary,
span {
  font-weight: bold;
}

li {
  list-style-type: square;
}

section {
  padding: 10px 50px 20px;
  background: linear-gradient(
      130deg,
      rgb(131, 58, 180) 0%,
      rgb(253, 29, 29) 70%,
      rgb(252, 176, 69) 100%
    )
    fixed;
  color: #fff;
  margin: 15px 15px 30px 0;
  border-radius: 35px 25px 35px 0;
  box-shadow: 2px 2px 0px rgb(255, 255, 255), 15px 15px 0px #000;
  border: 3px solid #000;
}

pre {
  font-size: 0.8em;
  padding: 20px;
  display: block;
  background-color: rgb(255, 255, 255);
  text-shadow: none;
  border: 3px solid #000;
}

pre code {
  background: none !important;
}

footer {
  display: flex;
  justify-content: center;
  position: sticky;
  height: 75px;
}

footer p,
footer a {
  flex-grow: 1;
  text-decoration: none;
  text-align: center;
}

footer a {
  color: #000;
  font-size: 2em;
}

footer a:hover {
  text-decoration: underline;
}

footer a:last-child img {
  height: 50px;
  margin: 10px;
}

.anchor {
  height: 1px;
}

@media (max-width: 1200px) {
  body {
    width: 100%;
  }

  header {
    justify-content: center;
  }

  header p {
    margin: auto;
  }

  header img {
    width: 236px;
    height: auto;
    box-shadow: -3px 0px 0px #000, 3px 0px 0px #000;
  }

  header div {
    margin-right: 43px;
  }

  h1 {
    margin: 0;
  }

  .menu {
    font-size: 1.5em;
    top: 0;
  }

  .menu nav {
    display: block;
    height: auto;
  }
  .menu nav a {
    display: inline-block;
    width: 100%;
    padding: 10px 0;
  }

  /* nav {
    cursor: pointer;
    font-size: 1.5em;
  }

  nav a {
    flex-grow: 0;
    padding: 10px 0;
  }

  nav a,
  nav:before,
  nav div:before {
    width: 100%;
    display: inline-block;
  }

  nav div {
    display: block;
    height: 450px;
  }

  nav::before {
    content: "Menu";
    padding: 10px 0;
    text-shadow: none;
    box-shadow: 0px 3px 0px #000;
    text-align: center;
    display: inherit;
  }

  nav:focus:before {
    content: none;
  }

  nav:focus div:before {
    content: "Close menu";
    text-shadow: none;
    padding: 10px 0;
    position: relative;
  }

  nav:not(:focus) div:not(:active) {
    display: none;
  } */

  main {
    padding: 30px;
  }

  footer {
    font-size: 1.5em;
  }
}

@media (max-width: 768px) {
  header {
    flex-direction: column;
    text-align: center;
  }

  header img {
    margin: 0 auto;
    box-shadow: none;
    border: 3px solid #000;
    border-top-color: rgb(0, 0, 0);
    border-top-style: solid;
    border-top-width: 3px;
    border-top: none;
  }

  header p {
    margin: 0;
    font-size: 1em;
    border: none;
    padding: 10px 0;
  }

  header div {
    margin: 0;
  }

  h1 {
    font-size: 1.5em;
  }

  h2,
  h3 {
    margin: 0;
    font-size: 1.2em;
  }

  ul {
    padding: 0 0 0 10px;
  }

  section {
    padding: 15px 15px 5px 30px;
    font-size: 15px;
  }

  blockquote {
    margin-right: 20px;
  }

  pre {
    white-space: pre-wrap;
    font-size: 0.7em;
    padding: 0;
  }

  footer {
    height: auto;
    flex-direction: column;
  }
}

